--- a/app/Dockerfile-dev
+++ b/app/Dockerfile-dev
@@ -11,11 +11,19 @@ RUN mvn -B -f pom.xml -s /usr/share/maven/ref/settings-docker.xml dependency:res
 COPY . .
 RUN mvn -B -s /usr/share/maven/ref/settings-docker.xml package -DskipTests
 
+# download the latest splunk javaagent version as part of the build process
+ADD https://github.com/signalfx/splunk-otel-java/releases/latest/download/splunk-otel-javaagent-all.jar splunk-otel-javaagent-all.jar
+# add read permissions for everybody - the application will be run with user!=root
+RUN chmod a+r splunk-otel-javaagent-all.jar
+
 FROM java:8-jdk-alpine
 WORKDIR /static
 COPY --from=0 /usr/src/atsea/app/react-app/build/ .
 WORKDIR /app
 COPY --from=1 /usr/src/atsea/target/AtSea-0.0.1-SNAPSHOT.jar .
+# copy the javaagent from the build step too
+COPY --from=1 /usr/src/atsea/splunk-otel-javaagent-all.jar .
 EXPOSE 5005
-ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005","-jar", "/app/AtSea-0.0.1-SNAPSHOT.jar"]
+# and add -javaagent to java command args
+ENTRYPOINT ["java", "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005", "-javaagent:/app/splunk-otel-javaagent-all.jar", "-jar", "/app/AtSea-0.0.1-SNAPSHOT.jar"]
 CMD ["--spring.profiles.active=postgres"]
